# StaySharp

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: check.md  create-suite.md  run-suite.md  setup.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/create-suite/: SKILL.md
.claude/skills/reset/: SKILL.md
.claude/skills/restart/: SKILL.md
.claude/skills/run-suite/: SKILL.md
.claude/skills/setup/: SKILL.md
go/: go.mod
java/: pom.xml
python/: pyproject.toml
typescript/: package.json  tsconfig.json
